# wrm

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: actions.rs  files_in_trash.rs  finish.rs  initialize.rs  main.rs  parse_arguments.rs  subcommands.rs  test.rs  utils.rs
src/actions/: destroy.rs  empty.rs
src/subcommands/: delete.rs  empty.rs  list.rs  remove.rs  restore.rs
