[package]
name = "wrm"
version = "0.3.0"
edition = "2021"
description = "Remove files or directories."
authors = ["9yokuro xzstd099@protonmail.com"]
repository = "https://github.com/9yokuro/wrm.git"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
filey = { version = "1.4.0", default-features = false }
inquire = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
walkdir = "2.4.0"
